# ethercat-soem

./: CMakeLists.txt  package.xml
scripts/: ebox.c
src/: ethercatbase.c  ethercatcoe.c  ethercatconfig.c  ethercatdc.c  ethercatfoe.c  ethercatmain.c  ethercatprint.c  ethercatsoe.c  nicdrv.c  osal.c  oshw.c
test/: aliastool.c  eepromtool.c  firm_update.c  red_test.c  simple_test.c  slaveinfo.c
